# SkyrimOutfitEquipmentSystemNG

./: .gitignore  .gitmodules  CMakeLists.txt  Debug-Tests.ppj - Shortcut.lnk  FlowerGirls.ppj  OStim.ppj  README.md  Release.ppj  vcpkg-configuration.json  vcpkg.json
contrib/: Distribution.rar
contrib/Distribution/Config/: SkyrimOutfitEquipmentSystemNG.ini  SkyrimOutfitEquipmentSystemNGTextInput.json
contrib/Distribution/ESP/: SkyrimOutfitEquipmentSystemNG.esp
contrib/Distribution/Options/FlowerGirls/ESP/: SkyrimOutfitEquipmentSystemNG-FG.esp
contrib/Distribution/Options/FlowerGirls/PapyrusSources/: skyoutequsysflowergirls.psc
contrib/Distribution/Options/OStimStandalone/PapyrusSources/: skyoutequsysostim.psc
contrib/Distribution/PapyrusSources/: skyoutequsysmcm.psc  skyoutequsysquicksloteffect.psc  skyoutequsysquickslotmanager.psc  skyoutsysautoswitchtrigger.psc  skyoutsysmcm.psc  skyoutsysquicksloteffect.psc  skyrimoutfitequipmentsystemnativefuncs.psc  skyrimoutfitsystemnativefuncs.psc
contrib/Distribution/Translations/interface/translations/: skyrimoutfitequipmentsystemng_english.txt  skyrimoutfitsystem_english.txt
contrib/Distribution/fomod/: ModuleConfig.xml  info.xml
dependencies/: INSTRUCTIONS.txt
include/: ArmorAddonOverrideService.h  AutoOutfitSwitchService.h  Forms.h  Hooking.h  OutfitSystem.h  OutfitSystemCacheService.h  OutfitSystemEventSink.h  Utility.h  version.h
include/RE/: REAugments.h
include/hooking/: Hooks.hpp  Patches.hpp
src/: ArmorAddonOverrideService.cpp  AutoOutfitSwitchService.cpp  Forms.cpp  Main.cpp  OutfitSystem.cpp  OutfitSystemCacheService.cpp  OutfitSystemEventSink.cpp  PCH.h  Utility.cpp  version.rc
src/RE/: REAugments.cpp
src/hooking/: Hooks_AE.cpp  Hooks_PRE_AE.cpp
src/protos/: cache.proto  input.proto  outfit.proto
